Fixed limit issue on mobile

--- a/src/components/infoboxes/infoboxes.css
+++ b/src/components/infoboxes/infoboxes.css
@@ -52,7 +52,7 @@
   }
 
   .spacer {
-    height: 75vh;
+    height: 73.5dvh;
     pointer-events: none;
     -webkit-user-select: none;
     -ms-user-select: none;
